@@ -27,6 +27,11 @@ con = mdb.connect(host=conf['DB_HOST'], user=conf['DB_USER'], passwd=conf['DB_PA
 cur = con.cursor()
 
 #get array of collectionhash
+cur.execute("select value from site where setting = 'grabnzbs'")
+grab = cur.fetchone()
+if int(grab[0]) == 0:
+	sys.exit("GrabNZBs is disabled")
+
 cur.execute("select collectionhash from nzbs group by collectionhash, totalparts having count(*) >= totalparts")
 datas = cur.fetchall()
 if len(datas) == 0:
